k8s/bad-pod.yaml
# apiVersion: v1
# kind: Pod
# metadata:
#   name: bad-pod-demo
# spec:
#   containers:
#     - name: bad-container
#       image: nginx
#       securityContext:
#         privileged: true

apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-demo
spec:
  containers:
    - name: bad-container
      image: nginx
      securityContext:
        privileged: false
      resources:
        limits:
          cpu: "100m"
          memory: "64Mi"
